# dataplane-rs

./: .gitignore  Cargo.toml  README.md  dataplane.example.persistent.toml  dataplane.example.toml  dist-workspace.toml  index.html  oranda-workspace.json  oranda.json  release-plz.toml
.github/workflows/: edc-dataplane-release.yml  release-docker.yml  release.yml  test.yml
crates/dataplane/: CHANGELOG.md  Cargo.toml
crates/dataplane-core/: CHANGELOG.md  Cargo.toml
crates/dataplane-core/migrations/sqlite/: 20241128164640_create_transfers.sql
crates/dataplane-core/src/: config.rs  core.rs  dataplane.rs  extensions.rs  lib.rs  registration.rs  signaling.rs  web.rs
crates/dataplane-core/src/core/: db.rs  model.rs  service.rs
crates/dataplane-core/src/core/db/: transfer.rs
crates/dataplane-core/src/core/db/sqlite/: transfer.rs
crates/dataplane-core/src/core/db/sqlx/transfer/: sqlite.rs
crates/dataplane-core/src/core/model/: edr.rs  namespace.rs  token.rs  transfer.rs
crates/dataplane-core/src/core/service/: edr.rs  refresh.rs  token.rs  transfer.rs
crates/dataplane-core/src/extensions/repo/: sqlite.rs
crates/dataplane-core/src/extensions/service/: transfer.rs
crates/dataplane-core/src/web/: api.rs  context.rs  error.rs  router.rs  server.rs  state.rs
crates/dataplane-core/src/web/api/: dataflows.rs  dataflows_test.rs  fixtures.rs  jwks.rs  public.rs  token.rs
crates/dataplane-core/src/web/proxy/: public.rs  server.rs
crates/dataplane-core/tests/e2e/: mod.rs  transfer.rs
crates/dataplane-core/tests/store/: mod.rs
crates/dataplane-core/tests/store/transfer/: mod.rs  transfer_sqlite.rs
crates/dataplane-macros/: Cargo.toml
crates/dataplane-macros/src/: interface.rs  lib.rs
crates/dataplane-proxy/: CHANGELOG.md  Cargo.toml
crates/dataplane-proxy/migrations/sqlite/: 20241128164640_create_transfers.sql
crates/dataplane-proxy/src/: config.rs  db.rs  extensions.rs  lib.rs  manager.rs  model.rs  service.rs  web.rs
crates/dataplane-proxy/src/db/: edr.rs  sqlite.rs
crates/dataplane-proxy/src/db/sqlite/: edr.rs
crates/dataplane-proxy/src/extensions/: config.rs  manager.rs  web.rs
crates/dataplane-proxy/src/extensions/repo/: sqlite.rs
crates/dataplane-proxy/src/model/: edr.rs
crates/dataplane-proxy/src/service/: edr.rs  refresh.rs  token.rs
crates/dataplane-proxy/src/web/: api.rs  proxy.rs  router.rs  state.rs
crates/dataplane-proxy/src/web/api/: jwks.rs  token.rs
crates/dataplane-proxy/src/web/proxy/: public.rs  server.rs
crates/dataplane-proxy/tests/: suite.rs
crates/dataplane-proxy/tests/e2e/: mod.rs  transfer.rs
crates/dataplane-proxy/tests/store/: mod.rs
crates/dataplane-proxy/tests/store/edr/: edr_sqlite.rs  mod.rs
crates/dataplane-proxy/tests/store/token/: mod.rs
crates/dataplane-signaling/: CHANGELOG.md  Cargo.toml
crates/dataplane-signaling/src/: extensions.rs  lib.rs  web.rs
crates/dataplane-signaling/src/extensions/: registration.rs  web.rs
crates/dataplane-signaling/src/web/: api.rs  context.rs  server.rs  state.rs  util.rs
crates/dataplane-signaling/src/web/api/: dataflows.rs
crates/dataplane/src/: main.rs
dataplane-rs/dataplane/: changelog.rss  index.html
dataplane-rs/dataplane-core/: changelog.rss  index.html
dataplane-rs/dataplane-core/changelog/: index.html
dataplane-rs/dataplane-core/changelog/edc-dataplane-core-v0.1.0/: index.html
dataplane-rs/dataplane-core/changelog/edc-dataplane-core-v0.1.1/: index.html
dataplane-rs/dataplane-core/changelog/edc-dataplane-core-v0.2.0/: index.html
dataplane-rs/dataplane-core/changelog/edc-dataplane-macros-v0.1.0/: index.html
dataplane-rs/dataplane-core/changelog/edc-dataplane-macros-v0.1.1/: index.html
dataplane-rs/dataplane-core/changelog/edc-dataplane-proxy-v0.1.1/: index.html
dataplane-rs/dataplane-core/changelog/edc-dataplane-v0.1.0/: index.html
dataplane-rs/dataplane-core/changelog/edc-dataplane-v0.1.1/: index.html
dataplane-rs/dataplane/changelog/: index.html
dataplane-rs/dataplane/changelog/edc-dataplane-core-v0.1.0/: index.html
dataplane-rs/dataplane/changelog/edc-dataplane-core-v0.1.1/: index.html
dataplane-rs/dataplane/changelog/edc-dataplane-core-v0.2.0/: index.html
dataplane-rs/dataplane/changelog/edc-dataplane-macros-v0.1.0/: index.html
dataplane-rs/dataplane/changelog/edc-dataplane-macros-v0.1.1/: index.html
dataplane-rs/dataplane/changelog/edc-dataplane-proxy-v0.1.1/: index.html
dataplane-rs/dataplane/changelog/edc-dataplane-v0.1.0/: index.html
dataplane-rs/dataplane/changelog/edc-dataplane-v0.1.1/: index.html
testing/: docker-compose.yml
testing/control-plane/: Dockerfile  build.gradle.kts  gradle.properties
testing/control-plane/gradle/: libs.versions.toml
