[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
license = "MIT OR Apache-2.0"
edition = "2021"


[workspace.dependencies]
axum = "0.7.9"
axum-macros = "0.4.2"
axum-extra = {  version = "0.9.6", features = ["typed-header"]}
sqlx = {version = "0.8.2", features = ["runtime-tokio-rustls", "uuid", "postgres", "sqlite", "chrono"]}
tokio = {  version= "1.41.1", features=["full"] }
tracing = "0.1.40"
tracing-subscriber = { version= "0.3.18" , features = ["env-filter"] }
config = "0.14.1"
serde = "1"
serde_json = "1"
serde_with = "3.11.0"
anyhow = "1.0.93"
reqwest = { version="0.12.9",  features= ["json"]}
bon = "3.3.0"
uuid = { version = "1.11.0", features = ["v4", "serde"]}
derive_more = { version= "1.0.0", features = ["from", "into"]}
jsonwebtoken = "9.3.0"
chrono = { version = "0.4.38", features = ["serde"]}
dashmap = "6.1.0"
thiserror = "2.0.8"
mockall = "0.13.1"
wiremock = "0.6.2"
edc-connector-client = "0.3.5"
ring = "0.17.4"
pem = "3.0.4"
ed25519-compact = "2.1.1"
secrecy = {version = "0.10.3", features = ["serde"]}
base64 = "0.22.1"
pingora = { version = "0.4", features = ["openssl"] }
pingora-proxy = "0.4.0"
futures = "0.3.31"
