[package]
name = "edc-dataplane-core"
version = "0.1.1"
license.workspace = true
edition.workspace = true
description= "An EDC compatible dataplane"
repository = "https://github.com/dataspace-rs/dataplane-rs"
keywords = ["dataspace", "http", "dataplane"]
categories = []
readme = "README.md"

[dependencies]
edc-dataplane-macros = {  path = "../dataplane-macros", version = "0.1.1" }
axum.workspace=true
axum-macros.workspace=true
axum-extra.workspace=true
sqlx.workspace=true
tokio.workspace=true
futures.workspace=true
tracing.workspace=true
config.workspace=true
serde.workspace=true
serde_json.workspace=true
serde_with.workspace=true
anyhow.workspace=true
reqwest.workspace=true
bon.workspace=true
uuid.workspace=true
derive_more.workspace=true
jsonwebtoken.workspace=true
chrono.workspace=true
dashmap.workspace=true
thiserror.workspace=true
secrecy.workspace=true
ed25519-compact.workspace=true
base64.workspace=true
pingora.workspace=true
pingora-proxy.workspace=true

[dev-dependencies]
mockall.workspace=true
wiremock.workspace=true
edc-connector-client.workspace=true
tower.workspace=true
http-body-util.workspace=true
