[package]
name = "edc-dataplane-core"
version = "0.2.1"
license.workspace = true
edition.workspace = true
description= "An EDC compatible dataplane"
repository = "https://github.com/dataspace-rs/dataplane-rs"
keywords = ["dataspace", "http", "dataplane"]
categories = []
readme = "README.md"

[dependencies]
miwa.workspace=true
axum.workspace=true
sqlx.workspace=true
tokio.workspace=true
futures.workspace=true
tracing.workspace=true
serde.workspace=true
serde_json.workspace=true
serde_with.workspace=true
anyhow.workspace=true
bon.workspace=true
uuid.workspace=true
chrono.workspace=true
thiserror.workspace=true
async-trait.workspace=true

[dev-dependencies]
mockall.workspace=true
