[package]
name = "edc-dataplane-macros"
version = "0.1.0"
license.workspace = true
edition.workspace = true
description= "Macros for an EDC compatible dataplane"
repository = "https://github.com/dataspace-rs/dataplane-rs"
keywords = ["dataspace", "http", "dataplane"]
categories = []
readme = "README.md"

[lib]
proc-macro = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = "2.0"
quote = "1.0"
proc-macro2 = "1.0"
darling = "0.20"
synstructure = "0.12"
attribute-derive = "0.6"
proc-macro-crate= "3.2"
