
[package]
name = "edc-dataplane-proxy"
version = "0.1.2"
license.workspace = true
edition.workspace = true
description= "An EDC compatible dataplane"
repository = "https://github.com/dataspace-rs/dataplane-rs"
keywords = ["dataspace", "http", "dataplane"]
categories = []

readme = "README.md"
[dependencies]
edc-dataplane-core = {  path = "../dataplane-core", version = "0.2.1" }
miwa.workspace=true
axum.workspace=true
axum-macros.workspace=true
axum-extra.workspace=true
sqlx.workspace=true
tokio.workspace=true
futures.workspace=true
tracing.workspace=true
serde.workspace=true
serde_json.workspace=true
serde_with.workspace=true
anyhow.workspace=true
bon.workspace=true
uuid.workspace=true
derive_more.workspace=true
jsonwebtoken.workspace=true
chrono.workspace=true
thiserror.workspace=true
secrecy.workspace=true
ed25519-compact.workspace=true
base64.workspace=true
pingora.workspace=true
pingora-proxy.workspace=true
async-trait.workspace=true

[dev-dependencies]
mockall.workspace=true
wiremock.workspace=true
reqwest.workspace=true
edc-connector-client.workspace=true
edc-dataplane-signaling = {  path = "../dataplane-signaling", version = "0.1.2" }
