[package]
name = "dataplane"
version = "0.1.0"
license.workspace = true
edition.workspace = true



[dependencies]
axum.workspace=true
sqlx.workspace=true
tokio.workspace=true
tracing.workspace=true
tracing-subscriber.workspace=true
anyhow.workspace=true
dataplane-core= { path = "../dataplane-core" , version = "0.1.0" }
