[package]
name = "edc-dataplane"
version = "0.1.1"
license.workspace = true
edition.workspace = true
description= "An EDC compatible dataplane"
repository = "https://github.com/dataspace-rs/dataplane-rs"
keywords = ["dataspace", "http", "dataplane"]
categories = []
readme = "README.md"


[dependencies]
axum.workspace=true
sqlx.workspace=true
tokio.workspace=true
tracing.workspace=true
tracing-subscriber.workspace=true
anyhow.workspace=true
edc-dataplane-core= { path = "../dataplane-core" , version = "0.1.1" }
