[package]
name = "edc-dataplane"
version = "0.1.2"
license.workspace = true
edition.workspace = true
description= "An EDC compatible dataplane"
repository = "https://github.com/dataspace-rs/dataplane-rs"
keywords = ["dataspace", "http", "dataplane"]
categories = []
readme = "README.md"


[dependencies]
tokio.workspace=true
tracing.workspace=true
tracing-subscriber.workspace=true
anyhow.workspace=true
miwa.workspace=true
edc-dataplane-core= { path = "../dataplane-core" , version = "0.2.0" }
edc-dataplane-proxy= { path = "../dataplane-proxy" , version = "0.1.1" }
edc-dataplane-signaling= { path = "../dataplane-signaling" , version = "0.1.1" }
